kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
  namespace: gmi
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: backend
    spec:
      containers:
        - command: ["bash", "./wait-for-it.sh", "db:5432", "--timeout=0", "--strict", "--", "bash", "./start-backend.sh"]
          image: registry.gitlab.com/de4512928/saas/backend:latest
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
      imagePullSecrets: 
        - name: registry-credentials
      restartPolicy: Always
status: {}
