kubernetes/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmi-ingress
  namespace: gmi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: nginx
          image: public.ecr.aws/nginx/nginx
          ports:
            - name: app-port
              containerPort: 3000
