kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
  namespace: gmi
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  externalName: db.digitalexhaust.ai
  selector:
    io.kompose.service: db
